k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g1-3d
  labels:
    app.kubernetes.io/name: g1-3d
    app.kubernetes.io/component: authoring-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: g1-3d
  template:
    metadata:
      labels:
        app.kubernetes.io/name: g1-3d
        app.kubernetes.io/component: authoring-console
    spec:
      containers:
        - name: g1-3d
          image: harbor.chs.gto-stc-aida.com/sysadmin-pub/g1-3d:v0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: viser
              containerPort: 8001
              protocol: TCP
            - name: map-viser
              containerPort: 8002
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/robot
              port: http
            periodSeconds: 5
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /api/robot
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/robot
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - name: g1-3d-data
              mountPath: /app/data
      volumes:
        - name: g1-3d-data
          persistentVolumeClaim:
            claimName: g1-3d-pvc-01
      restartPolicy: Always
