k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g1-3d
  labels:
    app.kubernetes.io/name: g1-3d
    app.kubernetes.io/component: authoring-console
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: g1-3d
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: viser
      port: 8001
      targetPort: viser
      protocol: TCP
    - name: map-viser
      port: 8002
      targetPort: map-viser
      protocol: TCP
