k8s/ingress-g1-3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: g1-3d
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
  - host: g1-3d.chs.gto-stc-aida.com
    http:
      paths:
      - backend:
          service:
            name: g1-3d
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - g1-3d.chs.gto-stc-aida.com
    secretName: g1-3d.chs.gto-stc-aida.com
